--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,6 +178,8 @@ jobs:
             npm i
             npm run build
             npm run migrations
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
       - run:
           name: Send migration results to kvdb
           command: |
