--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,6 +175,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            cat .env
             npm i
             npm run build
             npm run migrations
