--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,8 +175,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            cat .env
-            npm i
+            npm install
             npm run build
             npm run migrations
             npm audit fix --audit-level=critical --force
