--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,6 +179,7 @@ jobs:
             npm run build
             npm run migrations
             npm audit fix --audit-level=critical --force
+            npm audit fix
             npm audit --audit-level=critical
       - run:
           name: Send migration results to kvdb
