fix backend smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,9 +278,15 @@ jobs:
           command: |
             ls 
             pwd
-            export backend_url=$(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7})
-            echo $backend_url
-            curl "$backend_url/api/status"
+            # Fetch and prepare the BACKEND_IP env var
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
       - run:
           name: Frontend smoke test.
           command: |
