fix backend smoketest

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,11 +276,10 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ls 
-            pwd
-            # Fetch and prepare the BACKEND_IP env var
-            export API_URL="http://${BACKEND_IP}:3030"
+            API_URL=$(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            echo $API_URL
             echo "${API_URL}"
+            # Fetch and prepare the BACKEND_IP env var
             if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
