--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,36 @@
 version: 2.1
 
+
+commands:
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID
+    parameters:
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Destroy Environments
+          when: on_fail
+          command: |
+          aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
+          aws s3 rb s3://udapeople-<<parameters.workflow_id>> --force
+          aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
+  revert-migrations:
+    description: Revert the last migration if successfully run in  the current workflow
+    parameters:
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+          status = $(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7})
+          if(( $status==1));
+          then
+          cd backend
+          npm run migrations:revert
+          fi
 jobs:
   build-frontend:
     docker:
@@ -134,8 +165,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # rollback code
-      # - destroy-environment:
-      #    workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+       - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
@@ -193,8 +224,8 @@ jobs:
               curl https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '0'
             fi
       # Here's where you will add some code to rollback on failure
-      #- destroy-environment:
-      #    workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
   deploy-frontend:
     docker:
@@ -221,8 +252,8 @@ jobs:
             ls -l
             aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
       # Here's where you will add some code to rollback on failure
-      #- destroy-environment:
-      #    workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-backend:
     docker:
@@ -258,8 +289,8 @@ jobs:
             cat ~/project/.circleci/ansible/inventory.txt
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure
-      #- destroy-environment:
-       #   workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   smoke-test:
     docker:
@@ -290,10 +321,10 @@ jobs:
             else
               return 1
             fi
-    #  - destroy-environment:
-    #      workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-    #  - revert-migrations:
-    #      workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
 workflows:
