--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,9 @@ commands:
           name: Destroy Environments
           when: on_fail
           command: |
+            # Your code here
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
-            aws s3 rb s3://udapeople-<<parameters.workflow_id>> --force
+            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
   revert-migrations:
     description: Revert the last migration if successfully run in  the current workflow
