--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,8 @@ commands:
           name: Destroy Environments
           when: on_fail
           command: |
-            # Your code here
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
-            aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+            aws s3 rb s3://udapeople-<<parameters.workflow_id>> --force
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
   revert-migrations:
     description: Revert the last migration if successfully run in  the current workflow
@@ -26,12 +25,12 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-          status = $(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7})
-          if(( $status==1));
-          then
-          cd backend
-          npm run migrations:revert
-          fi
+            status = $(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            if(( $status==1));
+            then
+            cd backend
+            npm run migrations:revert
+            fi
 jobs:
   build-frontend:
     docker:
