--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,10 +343,11 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
+            npm install
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --tags project=udapeople \
-              --stack-name "udapeople" \
+              --stack-name "udapeople-${OldWorkflowID}" \
               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
             echo OldWorkflowID: "${OldWorkflowID}"
             echo Current Workflow Id: "${CIRCLE_WORKFLOW_ID:0:7}"
