--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,3 +411,5 @@ workflows:
           requires: [deploy-frontend, deploy-backend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
