--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -365,8 +365,7 @@ jobs:
           name: delete old stacks
           command: |
             # Fetch the Old workflow ID that had been exported earlier
-            status=$(curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7})
-            echo status > OldWorkflowID.txt
+            curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7} > OldWorkflowID.txt
             echo "old id is:"
             cat OldWorkflowID.txt
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
