--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,8 +203,6 @@ jobs:
       - image: sleavely/node-awscli:14.x
     steps:
       - checkout
-      - attach_workspace:
-          at: /root
       - run:
           name: Run migrations
           command: |
@@ -222,7 +220,7 @@ jobs:
             then 
               echo "has been done successfully"
               curl https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-              echo ${CIRCLE_WORKFLOW_ID:0:7} > /project/.circleci/ansible/oldflow.txt
+              curl https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7} -d ${CIRCLE_WORKFLOW_ID:0:7}
             else
               echo "has failed"
               curl https://kvdb.io/QborQRezDZpvYT4JrLqzEK/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '0'
@@ -363,13 +361,11 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - attach_workspace:
-          at: /root
       - run:
           name: delete old stacks
           command: |
             # Fetch the Old workflow ID that had been exported earlier
-            export OldWorkflowID=`cat /project/.circleci/ansible/oldflow.txt`
+            export OldWorkflowID=`curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7}`
             echo "old id is:" $OldWorkflowID
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
