--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -333,6 +333,8 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - attach_workspace:
+          at: /root
       - run:
           name: acquire old workflow id
           command: |
@@ -361,11 +363,14 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - attach_workspace:
+          at: /root
       - run:
           name: delete old stacks
           command: |
             # Fetch the Old workflow ID that had been exported earlier
-            export OldWorkflowID=`curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7}`
+            # export OldWorkflowID=`curl --insecure https://kvdb.io/QborQRezDZpvYT4JrLqzEK/stackid_${CIRCLE_WORKFLOW_ID:0:7}`
+            export OldWorkflowID=`cat ~/OldWorkflowID.txt`
             echo "old id is:" $OldWorkflowID
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
