--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -378,7 +378,7 @@ jobs:
       - run:
           name: delete old stacks
           command: |
-            # Fetch the Old workflow ID that had been exported earlier
+            # Fetch the Old workflow ID from the persisted storage file
             cd .circleci/ansible
             export OldWorkflowID=`cut -d '-' -f 2 oldflow.txt`
             echo "old id is:" $OldWorkflowID
@@ -409,9 +409,9 @@ workflows:
           requires: [build-backend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          #filters:
-          #  branches:
-          #    only: [test-feature-branch]
+          filters:
+            branches:
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
