--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,6 +296,7 @@ jobs:
             cd backend
             npm install
             npm run build
+            npm audit fix
             cd -
             # Zip dir
             tar -C backend -czvf artifact.tar.gz
