--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,6 +297,7 @@ jobs:
             npm install
             npm run build
             npm audit fix
+            npm audit fix --force
             cd -
             # Zip dir
             tar -C backend -czvf artifact.tar.gz
