--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,15 +288,19 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible rsync 
-            apk add curl
+            apk add --update ansible curl rsync openssh nodejs npm git
+            ansible --version
+            git --version
             pip3 install awscli
+            aws --version
       - run:
           name: Deploy backend
           command: |
             cd backend
             npm i
             npm run build
+            npm audit fix --force
+            npm audit --audit-level=critical
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
