--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,8 +299,8 @@ jobs:
             cd backend
             npm i
             npm run build
+            npm audit fix
             npm audit fix --force
-            npm audit --audit-level=critical
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
