--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,6 +286,7 @@ jobs:
           TYPEORM_ENTITIES: $TYPEORM_ENTITIES
     steps:
       - checkout
+      - ANSIBLE_HOST_KEY_CHECKING: False
       - add_ssh_keys:
           fingerprints: ["42:a7:37:6a:65:6b:45:f2:b8:0a:76:63:d5:6e:8a:60"]
       - attach_workspace:
