--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -337,8 +337,8 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            if curl "${API_URL}/api/status" | grep "ok"
+            export API_URL="http://${BACKEND_IP}"
+            if curl "${API_URL}:3030/api/status" | grep "ok"
             then
                 return 0
             else
