--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -323,12 +323,11 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
-      - attach_workspace:
-          at: /root
       - run:
           name: Install dependencies
+          working_directory: /tmp
           command: |
-            apk add --update curl
+            apk add --update curl nodejs npm
             pip install awscli
       - run:
           name: Backend smoke test.
@@ -337,23 +336,24 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text)
-            export API_URL="http://${BACKEND_IP}"
-            if curl "${API_URL}:3030/api/status" | grep "ok"
+            export API_URL="http://${BACKEND_IP}:3030"
+            if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
             else
                 return 1
             fi
-    
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
-              return 0
+               # Change this to 0 after the job fails
+                return 0
             else
-              return 1
+                return 1
             fi
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
