--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -40,7 +40,7 @@
       TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
       TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
       TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-      TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
+      TYPEORM_PORT: 5342
       TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
       
   roles:
