--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -30,7 +30,6 @@
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     # Add more env vars here
       NODE_ENV: "{{ lookup('env','NODE_ENV') }}"
       VERSION: "{{ lookup('env','VERSION') }}"
@@ -40,7 +39,7 @@
       TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
       TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
       TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-      TYPEORM_PORT: 5342
+      TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
       TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
       
   roles:
