declare backend env vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,6 +282,19 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
+            touch .env
+            echo ENVIRONMENT=production > '.env'
+            echo TYPEORM_CONNECTION=postgres >> '.env'
+            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> '.env'
+            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> '.env'
+            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> '.env'
+            echo NODE_ENV=production >> '.env'
+            echo TYPEORM_HOST=$TYPEORM_HOST >> '.env'
+            echo TYPEORM_PORT=$TYPEORM_PORT >> '.env'
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> '.env'
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> '.env'
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> '.env'
+            
             npm i
             npm run build
             npm audit fix
@@ -325,9 +338,9 @@ jobs:
 
             if curl -v "${API_URL}/api/status" | grep "ok"
             then
-              return 0
+                return 0
             else
-              return 1
+                return 1
             fi             
       - run:
           name: Frontend smoke test.
@@ -336,7 +349,6 @@ jobs:
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
-               # Change this to 0 after the job fails
                 return 0
             else
                 return 1
